# portfolio

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  package-lock.json  package.json
backend/: Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.css  App.tsx  app.rs  context.rs  index.css  main.rs
frontend/src/components/: Navigation.tsx  PoneglyphOverlay.css  PoneglyphOverlay.tsx  PoneglyphSection.tsx  TransitionSection.tsx  mod.rs  navigation.rs  poneglyph_overlay.rs  poneglyph_section.rs  transition_section.rs
frontend/src/components/sections/: AboutSection.tsx  ContactSection.tsx  ExperienceSection.tsx  PoneglyphAlphabetSection.tsx  ProjectsSection.tsx  SkillsSection.tsx  about.rs  alphabet.rs  contact.rs  experience.rs  mod.rs  projects.rs  skills.rs
frontend/src/hooks/: mod.rs  useDebounce.ts  useIntersectionObserver.ts  useThrottledScroll.ts  use_intersection_observer.rs  use_throttled_scroll.rs
frontend/src/utils/: mod.rs  poneglyphConverter.ts  poneglyph_converter.rs
frontend/style/: main.css
