[package]
name = "portfolio-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = "0.8.4"
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde_json = "1.0"

# CORS for frontend requests
tower-http = { version = "0.6.6", features = ["cors"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Email for contact form (optional for now)
# lettre = "0.11"

# Environment variables
# dotenv = "0.15"
