[package]
name = "portfolio-frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "DomRect",
    "EventTarget",
    "Event",
    "ScrollToOptions",
    "ScrollBehavior",
    "ScrollIntoViewOptions",
    "IntersectionObserver",
    "IntersectionObserverInit",
    "IntersectionObserverEntry",
    "ResizeObserver",
    "ResizeObserverEntry",
    "ResizeObserverSize",
    "AddEventListenerOptions",
    "MouseEvent",
] }
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
console_log = "1"
log = "0.4"
fastrand = "2"
